syntax = "proto3";

package diagnosis;
option go_package = "github.com/CyberAgent/mimosa-diagnosis/pkg/pb/diagnosis";

message Diagnosis {
    uint32 diagnosis_id = 1;
    uint32 project_id = 2;
    string name = 3;
    int64 created_at = 4;
    int64 updated_at = 5;
}

message DiagnosisForUpsert {
    uint32 diagnosis_id = 1;
    string name = 2;
}

message DiagnosisDataSource {
    uint32 diagnosis_data_source_id = 1;
    string name = 2;
    string description = 3;
    float max_score = 4;
    int64 created_at = 5;
    int64 updated_at = 6;
}

message DiagnosisDataSourceForUpsert {
    uint32 diagnosis_data_source_id = 1;
    string name = 2;
    string description = 3;
    float max_score = 4;
}

message RelDiagnosisDataSource {
    uint32 rel_diagnosis_data_source_id = 1;
    uint32 diagnosis_data_source_id = 2;
    uint32 diagnosis_id = 3;
    uint32 project_id = 4;
    string record_id = 5;
    string jira_id = 6;
    string jira_key = 7;
    int64 created_at = 8;
    int64 updated_at = 9;
}

message RelDiagnosisDataSourceForUpsert {
    uint32 rel_diagnosis_data_source_id = 1;
    uint32 diagnosis_data_source_id = 2;
    uint32 diagnosis_id = 3;
    string record_id = 4;
    string jira_id = 5;
    string jira_key = 6;
}
