syntax = "proto3";

package diagnosis;
option go_package = "github.com/CyberAgent/mimosa-diagnosis/pkg/pb/diagnosis";

import "entities.proto";
import "google/protobuf/empty.proto";

service DiagnosisService {
  // Diagnosis
  rpc ListDiagnosis(ListDiagnosisRequest) returns (ListDiagnosisResponse) {}
  rpc GetDiagnosis(GetDiagnosisRequest) returns (GetDiagnosisResponse) {}
  rpc PutDiagnosis(PutDiagnosisRequest) returns (PutDiagnosisResponse) {}
  rpc DeleteDiagnosis(DeleteDiagnosisRequest) returns (google.protobuf.Empty) {}

  // DataSource
  rpc ListDiagnosisDataSource(ListDiagnosisDataSourceRequest) returns (ListDiagnosisDataSourceResponse) {}
  rpc GetDiagnosisDataSource(GetDiagnosisDataSourceRequest) returns (GetDiagnosisDataSourceResponse) {}
  rpc PutDiagnosisDataSource(PutDiagnosisDataSourceRequest) returns (PutDiagnosisDataSourceResponse) {}
  rpc DeleteDiagnosisDataSource(DeleteDiagnosisDataSourceRequest) returns (google.protobuf.Empty) {}

  // RelDiagnosisDataSource
  rpc ListRelDiagnosisDataSource(ListRelDiagnosisDataSourceRequest) returns (ListRelDiagnosisDataSourceResponse) {}
  rpc GetRelDiagnosisDataSource(GetRelDiagnosisDataSourceRequest) returns (GetRelDiagnosisDataSourceResponse) {}
  rpc PutRelDiagnosisDataSource(PutRelDiagnosisDataSourceRequest) returns (PutRelDiagnosisDataSourceResponse) {}
  rpc DeleteRelDiagnosisDataSource(DeleteRelDiagnosisDataSourceRequest) returns (google.protobuf.Empty) {}
  // KICK
  rpc StartDiagnosis(StartDiagnosisRequest) returns (StartDiagnosisResponse) {}
}

// Diagnosis Service
message ListDiagnosisRequest {
  uint32 project_id = 1;
  string name = 2;
}

message ListDiagnosisResponse {repeated Diagnosis diagnosis = 1; }

message GetDiagnosisRequest {
  uint32 project_id = 1;
  uint32 diagnosis_id = 2;
}

message GetDiagnosisResponse { Diagnosis diagnosis = 1;}

message PutDiagnosisRequest {
  uint32 project_id = 1;
  DiagnosisForUpsert diagnosis = 2;
}

message PutDiagnosisResponse { Diagnosis diagnosis = 1;}

message DeleteDiagnosisRequest {
  uint32 project_id = 1;
  uint32 diagnosis_id = 2;
}

// DiagnosisDataSourceService
message ListDiagnosisDataSourceRequest {
  uint32 project_id = 1;
  string name = 2;
}

message ListDiagnosisDataSourceResponse {repeated DiagnosisDataSource diagnosis_data_source = 1;}

message GetDiagnosisDataSourceRequest {
  uint32 project_id = 1;
  uint32 diagnosis_data_source_id = 2;
}

message GetDiagnosisDataSourceResponse { DiagnosisDataSource diagnosis_data_source = 1;}

message PutDiagnosisDataSourceRequest {
  uint32 project_id = 1;
  DiagnosisDataSourceForUpsert diagnosis_data_source = 2;
}

message PutDiagnosisDataSourceResponse {
  uint32 project_id = 1;
  DiagnosisDataSource diagnosis_data_source = 2;
}

message DeleteDiagnosisDataSourceRequest {
  uint32 project_id = 1;
  uint32 diagnosis_data_source_id = 2;
}

//KICK Diagnosis
message StartDiagnosisRequest {
  uint32 project_id = 1;
  uint32 rel_diagnosis_data_source_id = 2;
}

message StartDiagnosisResponse {
  string message = 1;
}

// RelDiagnosisDataSourceService
message ListRelDiagnosisDataSourceRequest {
  uint32 project_id = 1;
  uint32 diagnosis_id = 2;
  uint32 diagnosis_data_source_id = 3;
}

message ListRelDiagnosisDataSourceResponse {repeated  RelDiagnosisDataSource rel_diagnosis_data_source = 1;}

message GetRelDiagnosisDataSourceRequest {
  uint32 project_id = 1;
  uint32 rel_diagnosis_data_source_id = 2;
}

message GetRelDiagnosisDataSourceResponse { RelDiagnosisDataSource rel_diagnosis_data_source = 1;}

message PutRelDiagnosisDataSourceRequest {
  uint32 project_id = 1;
  RelDiagnosisDataSourceForUpsert rel_diagnosis_data_source = 2;
}

message PutRelDiagnosisDataSourceResponse { RelDiagnosisDataSource rel_diagnosis_data_source = 1;}

message DeleteRelDiagnosisDataSourceRequest {
  uint32 project_id = 1;
  uint32 rel_diagnosis_data_source_id = 2;
}